# fetch-tokyo-idsc-github-actions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  LICENSE.md  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  claude.yml  fetch-data-common.yml  fetch-data-daily.yml  fetch-data-weekly.yml  fetch-data.yml  test.yml
.kiro/specs/tokyo-epidemic-data-automation/: design.md  requirements.md  tasks.md
config/: config.yml
data/logs/: .gitkeep  continuity_report_20251102_101922.md  continuity_report_20251102_102007.md  continuity_report_20251102_111410.md  continuity_report_20251102_115958.md  stats_20251101_105009.json  stats_20251101_124236.json  stats_20251101_132549.json  stats_20251101_133518.json  stats_20251101_135048.json  stats_20251101_150438.json  stats_20251101_184248.json  stats_20251102_001833.json  stats_20251102_003536.json  stats_20251102_005814.json  stats_20251102_005817.json  stats_20251102_005841.json  stats_20251102_005926.json  stats_20251102_010052.json  stats_20251102_080744.json  stats_20251102_101923.json  stats_20251102_102010.json  stats_20251102_111414.json  stats_20251102_120001.json  stats_20251102_120252.json  stats_20251102_120952.json  stats_20251102_132818.json  stats_20251102_133516.json  stats_20251102_135900.json  stats_20251103_081003.json  stats_20251104_080908.json  stats_20251105_080851.json  stats_20251106_080847.json  stats_20251106_084903.json  stats_20251107_080855.json  stats_20251108_080757.json  stats_20251109_080731.json  stats_20251110_080957.json  stats_20251111_080843.json  stats_20251112_080907.json  (+13 more)
data/raw/: .gitkeep  notifiable_weekly_2000_01.csv  notifiable_weekly_2000_02.csv  notifiable_weekly_2000_03.csv  notifiable_weekly_2000_04.csv  notifiable_weekly_2000_05.csv  notifiable_weekly_2000_06.csv  notifiable_weekly_2000_07.csv  notifiable_weekly_2000_08.csv  notifiable_weekly_2000_09.csv  notifiable_weekly_2000_10.csv  notifiable_weekly_2000_11.csv  notifiable_weekly_2000_12.csv  notifiable_weekly_2000_13.csv  notifiable_weekly_2000_14.csv  notifiable_weekly_2000_15.csv  notifiable_weekly_2000_16.csv  notifiable_weekly_2000_17.csv  notifiable_weekly_2000_18.csv  notifiable_weekly_2000_19.csv  notifiable_weekly_2000_20.csv  notifiable_weekly_2000_21.csv  notifiable_weekly_2000_22.csv  notifiable_weekly_2000_23.csv  notifiable_weekly_2000_24.csv  notifiable_weekly_2000_25.csv  notifiable_weekly_2000_26.csv  notifiable_weekly_2000_27.csv  notifiable_weekly_2000_28.csv  notifiable_weekly_2000_29.csv  notifiable_weekly_2000_30.csv  notifiable_weekly_2000_31.csv  notifiable_weekly_2000_32.csv  notifiable_weekly_2000_33.csv  notifiable_weekly_2000_34.csv  notifiable_weekly_2000_35.csv  notifiable_weekly_2000_36.csv  notifiable_weekly_2000_37.csv  notifiable_weekly_2000_38.csv  notifiable_weekly_2000_39.csv  (+7896 more)
data/raw/.metadata/: .gitkeep  hash_index.json  notifiable_weekly_2000_01.json  notifiable_weekly_2000_02.json  notifiable_weekly_2000_03.json  notifiable_weekly_2000_04.json  notifiable_weekly_2000_05.json  notifiable_weekly_2000_06.json  notifiable_weekly_2000_07.json  notifiable_weekly_2000_08.json  notifiable_weekly_2000_09.json  notifiable_weekly_2000_10.json  notifiable_weekly_2000_11.json  notifiable_weekly_2000_12.json  (+8251 more)
scripts/: check_missing.py  create_pr.sh  fetch_data.py  validate_continuity.py  validate_data.py
src/fetchers/: __init__.py  base_fetcher.py  enhanced_fetcher.py
src/managers/: __init__.py  config_manager.py  storage_manager.py
tests/: __init__.py  conftest.py  test_async_error_handling.py  test_base_fetcher.py  test_config_manager.py  test_data_collector.py  test_data_validation_security.py  test_enhanced_fetcher.py  test_enhanced_fetcher_edge_cases.py  test_fix_helper.py  test_helpers.py  test_integration.py  test_performance_load.py  test_production_scenarios.py  test_storage_manager.py  test_storage_manager_advanced.py  test_storage_manager_edge_cases.py  test_target_filtering.py  test_validate_continuity.py
tests/fixtures/: mock_response.csv
(+360 files in other folders)
